# Wisdom

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  build_deps.zig  build_interface.zig  flake.nix
cmake/: functions.cmake  settings.cmake
examples/: build.zig
examples/shaders/: build.zig
examples/uniform-buffers-kdgui/: CMakeLists.txt  app.cpp  app.h
plugins/: CMakeLists.txt
plugins/Slang/: CMakeLists.txt
tests/manual/extended_allocation/: test.cpp
wisdom/: CMakeLists.txt
wisdom/include/wisdom/bridge/: source_location.h
wisdom/include/wisdom/vulkan/: vk_device.h  vk_handle_traits.h
wisdom/include/wisdom/vulkan/impl/: vk_device.cpp
wisdom/src/wisdom/: empty.cpp
